ending section about us

--- a/contact_us.section-visit_us.partial.html
+++ b/contact_us.section-visit_us.partial.html
@@ -10,7 +10,7 @@
       <div class="section-contact-us-visit-us__container">
         <h2 class="section-contact-us-visit-us__title">~ VISIT US ~</h2>
         <p class="section-contact-us-visit-us__description">
-          Tasting Сonditions
+          Tasting Conditions
         </p>
         <p class="section-contact-us-visit-us__text">
           <span
@@ -23,25 +23,33 @@
           identification to verify your age and follow certain safety protocols.
         </p>
         <div class="section-contact-us-visit-us_docs">
+          <div class="section-contact-us-visit-us_doc">
+            <img
+              class="pdf"
+              src="img/img_contact_us.section-visit_us/pdf.svg"
+              alt="PDF file"
+            />
+            <p class="section-contact-us-visit-us_doc-text">
+              <em><u>Terms&Conditions</u></em>
+            </p>
+          </div>
+          <div class="section-contact-us-visit-us_doc"></div>
           <img
+            class="pdf"
             src="img/img_contact_us.section-visit_us/pdf.svg"
             alt="PDF file"
           />
-          <p class="section-contact-us-visit-us_doc">
-            <em><u>Terms&Conditions</u></em>
-          </p>
-          <img
-            src="img/img_contact_us.section-visit_us/pdf.svg"
-            alt="PDF file"
-          />
-          <p class="section-contact-us-visit-us_doc">
+          <p class="section-contact-us-visit-us_doc-text">
             <em><u>Privacy Policy</u></em>
           </p>
+          <div class="section-contact-us-visit-us_doc"></div>
           <img
+            class="pdf"
             src="img/img_contact_us.section-visit_us/pdf.svg"
             alt="PDF file"
           />
-          <p class="section-contact-us-visit-us_doc">
+          <div class="section-contact-us-visit-us_doc"></div>
+          <p class="section-contact-us-visit-us_doc-text">
             <em><u>Legal Information</u></em>
           </p>
         </div>
@@ -50,22 +58,86 @@
           perfumes or colognes. We also ask you to be mindful of the tasting
           etiquette and follow instructions of our staff.
         </p>
-        <ul>
-          <li>No outside food or drink is allowed;</li>
-          <li>Smoking is not allowed in the tasting room;</li>
-          <li>Pets are not allowed in the tasting room.</li>
-        </ul>
-        <form
-          class="section-contact-us-visit-us__form"
-          action="https://formspree.io/f/xayrllea"
-          method="post"
-        >
-          <input class="section-contact-us-visit-us_form-input" type="text" required name="fullname" placeholder="Enter your fullname*">
-          <input class="section-contact-us-visit-us_form-input" type="tel" required name="phonenumber" placeholder="Enter your phone number*">
-          <input class="section-contact-us-visit-us_form-input" type="email" required name="email" placeholder="Enter your e-mail*">
-          <textarea class="section-contact-us-visit-us_form-textarea" type="text" name="message" rows="5" cols="20" placeholder="Type your maessage"></textarea>
-          <input class="section-contact-us-visit-us_form-input" type="submit" value="Send">
-        </form>
+        <div class="ckeckbox_text">
+          <div class="ckeckbox_item">
+            <input
+              id="dish"
+              class="ckeckbox"
+              type="checkbox"
+              disabled
+              checked
+            />
+            <label for="dish" class="ckeckbox_label"
+              >No outside food or drink is allowed;</label
+            >
+          </div>
+          <div class="ckeckbox_item">
+            <input
+              id="smoking"
+              class="ckeckbox"
+              type="checkbox"
+              disabled
+              checked
+            />
+            <label for="smoking" class="ckeckbox_label"
+              >Smoking is not allowed in the tasting room;</label
+            >
+          </div>
+          <div class="ckeckbox_item">
+            <input
+              id="pets"
+              class="ckeckbox"
+              type="checkbox"
+              disabled
+              checked
+            />
+            <label for="pets" class="ckeckbox_label"
+              >Pets are not allowed in the tasting room;</label
+            >
+          </div>
+        </div>
+        <div class="section-contact-us-visit-us__form">
+          <form
+            class="section-contact-us-visit-us__form-body"
+            action="https://formspree.io/f/xayrllea"
+            method="post"
+          >
+            <input
+              class="section-contact-us-visit-us_form-input"
+              type="text"
+              required
+              name="fullname"
+              placeholder="Enter your fullname*"
+            />
+            <input
+              class="section-contact-us-visit-us_form-input"
+              type="tel"
+              required
+              name="phonenumber"
+              placeholder="Enter your phone number*"
+            />
+            <input
+              class="section-contact-us-visit-us_form-input"
+              type="email"
+              required
+              name="email"
+              placeholder="Enter your e-mail*"
+            />
+            <textarea
+              class="section-contact-us-visit-us_form-textarea"
+              type="text"
+              name="message"
+              rows="5"
+              cols="20"
+              placeholder="Type your maessage"
+            ></textarea>
+            <input
+              class="section-contact-us-visit-us_form-input"
+              type="submit"
+              value="Send"
+            />
+          </form>
+        </div>
         <p class="section-contact-us-visit-us__text">
           It is strongly recommended that you book in advance if you wish to
           attend a wine tasting event. This ensures that you have a place booked
@@ -76,86 +148,154 @@
           it is important to ensure that you are able to attend by booking your
           place in advance.
         </p>
-        <h3 class="section-contact-us-visit-us__guide-tours">Guided Tours</h3>
-        <p class="section-contact-us-visit-us__text">
-          Book a guided tour at a winery and discover the wonderful world of
-          wine. Enjoy the breathtaking views and learn about the process of
-          winemaking.
-        </p>
-        <p class="section-contact-us-visit-us__text">
-          Our knowledgeable guides will lead you through the vineyards,
-          explaining how grapes are grown, harvested and made into wine. Sample
-          delicious wines while taking in the scenery of the beautiful
-          vineyards.
-        </p>
-        <div class="section-contact-us-visit-us__info">
-          <img
-            src="img/img_contact_us.section-visit_us/glass.svg"
-            alt="Glass"
-          />
-          <p class="section-contact-us-visit-us__description">
-            <em>Delicious wine</em>
+        <div class="section-contact-us-visit-us__guide-tours">
+          <h3 class="section-contact-us-visit-us__guide-tours-title">
+            Guided Tours
+          </h3>
+          <p class="section-contact-us-visit-us__text">
+            Book a guided tour at a winery and discover the wonderful world of
+            wine. Enjoy the breathtaking views and learn about the process of
+            winemaking.
           </p>
-          <p class="section-contact-us-visit-us__description">
-            Enjoy the taste of our selected wines.
+          <p class="section-contact-us-visit-us__text">
+            Our knowledgeable guides will lead you through the vineyards,
+            explaining how grapes are grown, harvested and made into wine.
+            Sample delicious wines while taking in the scenery of the beautiful
+            vineyards.
           </p>
-          <img src="img/img_contact_us.section-visit_us/jug.svg" alt="Jug" />
-          <p class="section-contact-us-visit-us__description">
-            <em>History of winemaking</em>
-          </p>
-          <p class="section-contact-us-visit-us__description">
-            Learn more about winemaking processes.
-          </p>
-          <div class="section-contact-us-visit-us__common-qeustions">
-            <div class="section-contact-us-visit-us__question">
-              <p class="section-contact-us-visit-us__question-text">
-                What should I wear to a winery visit?
-              </p>
-              <p class="section-contact-us-visit-us__question-answer">
-                Generally speaking, it is best to dress in smart casual attire.
-                You should avoid wearing open-toed shoes or flip-flops. It is
-                also recommended that you wear layers in case the temperature
-                inside the winery is different than outside.
-              </p>
-            </div>
-            <div class="section-contact-us-visit-us__question">
-              <p class="section-contact-us-visit-us__question-text">
-                What payment options do you provide?
-              </p>
-              <p class="section-contact-us-visit-us__question-answer">
-                We offer a variety of payment methods. We accept cash, checks,
-                and the majority of credit cards such as Visa, MasterCard, and
-                American Express.
-              </p>
-            </div>
-            <div class="section-contact-us-visit-us__question">
-              <p class="section-contact-us-visit-us__question-text">
-                Can I bring my own food and drinks?
-              </p>
-              <p class="section-contact-us-visit-us__question-answer">
-                Sorry, we do not allow outside food or beverages, but we assure
-                you that we provide many food options during our tastings.
-              </p>
-            </div>
-            <div class="section-contact-us-visit-us__question">
-              <p class="section-contact-us-visit-us__question-text">
-                Do I need to make a reservation?
-              </p>
-              <p class="section-contact-us-visit-us__question-answer">
-                Yes, it's better to make a reservation if you want to join our
-                guided tour or wine tasting. Some of the events are available
-                for club members only.
-              </p>
-            </div>
-            <div class="section-contact-us-visit-us__question">
-              <p class="section-contact-us-visit-us__question-text">
-                What does membership mean?
-              </p>
-              <p class="section-contact-us-visit-us__question-answer">
-                Membership in our club provides the complimentary delivery of
-                our wines to your doorstep, participation in private events,
-                tastings and so on.
-              </p>
+          <div class="section-contact-us-visit-us__info">
+            <img
+              class="glass"
+              src="img/img_contact_us.section-visit_us/glass.svg"
+              alt="Glass"
+            />
+            <p class="section-contact-us-visit-us__title-description">
+              <em>Delicious wine</em>
+            </p>
+            <p class="section-contact-us-visit-us__description">
+              Enjoy the taste of our selected wines.
+            </p>
+            <img
+              class="jug"
+              src="img/img_contact_us.section-visit_us/jug.svg"
+              alt="Jug"
+            />
+            <p class="section-contact-us-visit-us__title-description">
+              <em>History of winemaking</em>
+            </p>
+            <p class="section-contact-us-visit-us__description">
+              Learn more about winemaking processes.
+            </p>
+            <div class="section-contact-us-visit-us__spollers-container">
+              <div data-spollers data-one-block class="spollers-spoller">
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    What should I wear to a winery visit?
+                  </button>
+                  <div class="spoller-text">
+                    Generally speaking, it is best to dress in smart casual
+                    attire. You should avoid wearing open-toed shoes or
+                    flip-flops. It is also recommended that you wear layers in
+                    case the temperature inside the winery is different than
+                    outside.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    What payment options do you provide?
+                  </button>
+                  <div class="spoller-text">
+                    We offer a variety of payment methods. We accept cash,
+                    checks, and the majority of credit cards such as Visa,
+                    MasterCard, and American Express.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    Can I bring my own food and drinks?
+                  </button>
+                  <div class="spoller-text">
+                    Sorry, we do not allow outside food or beverages, but we
+                    assure you that we provide many food options during our
+                    tastings.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    Do I need to make a reservation?
+                  </button>
+                  <div class="spoller-text">
+                    Yes, it's better to make a reservation if you want to join
+                    our guided tour or wine tasting. Some of the events are
+                    available for club members only.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    What does membership mean?
+                  </button>
+                  <div class="spoller-text">
+                    Membership in our club provides the complimentary delivery
+                    of our wines to your doorstep, participation in private
+                    events, tastings and so on.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    Can I buy wine right at your winery?
+                  </button>
+                  <div class="spoller-text">
+                    Of course, we have a shop at the tasting room. You can buy
+                    any wines you like or visit one of the authorized stores in
+                    the USA.
+                  </div>
+                </div>
+                <div class="spollers-spoller">
+                  <button
+                    tabindex="-1"
+                    type="button"
+                    data-spoller
+                    class="spoller-title"
+                  >
+                    What payment options do you provide?
+                  </button>
+                  <div class="spoller-text">
+                    We offer a variety of payment methods. We accept cash,
+                    checks, and the majority of credit cards such as Visa,
+                    MasterCard, and American Express.
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="section-contact-us-visit-us__question">
               <p class="section-contact-us-visit-us__question-text">
