--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -10,20 +10,20 @@
       <div class="section-about-us__container">
         <div class="section-about-us__content">
           <div class="section-about-us__content-title">
-          <h2 class="section-about-us__title">~ ABOUT US ~</h2>
-          <p class="section-about-us__description">
-            Wine is Poetry in a Bottle. Discover Our <em>Wines</em>.
-          </p>
-        </div>
-        <div class="section-about-us__content-text">
-          <p class="section-about-us__text">
-            Our artisan winery located in Austin, Texas is committed to
-            producing delicious, interesting, well-balanced wines with the
-            complexity of flavors. Fruits from each vintage tell the story of
-            the season. We're dedicated to supporting sustainably farmed,
-            terroir expressive vineyards.
-          </p>
-        </div>
+            <h2 class="section-about-us__title">~ ABOUT US ~</h2>
+            <p class="section-about-us__description">
+              Wine is Poetry in a Bottle. Discover Our <em>Wines</em>.
+            </p>
+          </div>
+          <div class="section-about-us__content-text">
+            <p class="section-about-us__text">
+              Our artisan winery located in Austin, Texas is committed to
+              producing delicious, interesting, well-balanced wines with the
+              complexity of flavors. Fruits from each vintage tell the story of
+              the season. We're dedicated to supporting sustainably farmed,
+              terroir expressive vineyards.
+            </p>
+          </div>
         </div>
         <div class="section-about-us__info">
           <div class="section-about-us__info-table">
@@ -52,12 +52,17 @@
             <p class="section-about-us__fact-label">Visitors per year.</p>
           </div>
         </div>
-        <div class="section-about-us_video">
-          <img
-            width="500"
-            src="img/img_section_about_us/video-presentation.jpg"
-            alt="Video Presentation"
-          />
+        <div class="section-about-us__video">
+          <div class="section-about-us__video-link">
+            <iframe
+              src="https://www.youtube.com/embed/Jp1293bC5pQ?si=6R3h2shmyU1B7TOB&amp;controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
       </div>
     </section>
