fix links in headers

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -21,13 +21,13 @@
                     <li class="menu-body__list-item"><a href="about_us.html" class="header__menu-link">
                         ABOUT US
                     </a></li>
-                    <li class="menu-body__list-item"><a href="contact_us.section-distribution.partial.html#distribution-scroll" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
                         DISTRIBUTION
                     </a></li>
                     <li class="menu-body__list-item"><a href="collection.html" class="header__menu-link">
                         COLLECTION
                     </a></li>
-                    <li class="menu-body__list-item"><a href="collection.section-tasting-menu.partial.html" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="collection.html" class="header__menu-link">
                         TESTING
                     </a></li>
                     <li class="menu-body__list-item"><a href="wineclub.html" class="header__menu-link">
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="header__menu-item">
-                    <a href="contact_us.section-distribution.partial.html#distribution-scroll" class="header__menu-link">
+                    <a href="contact_us.html" class="header__menu-link">
                         DISTRIBUTION
                     </a>
                 </div>
@@ -74,7 +74,7 @@
         <div class="header__wrapper-list">
             <div class="header__menu-list">
                 <div class="header__menu-item">
-                    <a href="collection.section-tasting-menu.partial.html" class="header__menu-link">
+                    <a href="collection.html" class="header__menu-link">
                         TESTING
                     </a>
                 </div>
